--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,5 +3,6 @@ Description: Interface for ...
 Version: 0.2-0
 Author: Linda Tran, ...
 Maintainer: Duncan Temple Lang <dtemplelang@ucdavis.edu>
-Imports: tcltk, tcltk2, ROC
+Imports: tcltk, tcltk2
+Note: Will use ROC but arranges to install that if necessary via BioConductor's installation mechanism.
 
