--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,4 +5,4 @@ Author: Linda Tran, ...
 Maintainer: Duncan Temple Lang <dtemplelang@ucdavis.edu>
 Imports: tcltk, tcltk2
 Note: Will use ROC but arranges to install that if necessary via BioConductor's installation mechanism.
-
+   The code does not use the GGIR package.
